Bug 90433 - [WK2][EFL] Free Ewk_Intent calloc'd memory with free() instead of delete
Summary: [WK2][EFL] Free Ewk_Intent calloc'd memory with free() instead of delete
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit EFL (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords:
Depends on:
Blocks: 90064
  Show dependency treegraph
 
Reported: 2012-07-02 22:46 PDT by Chris Dumez
Modified: 2012-07-02 23:24 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.75 KB, patch)
2012-07-02 22:48 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2012-07-02 22:46:53 PDT
The Ewk_Intent memory is allocated with calloc() but freed with delete. We need to switch to free().
Comment 1 Chris Dumez 2012-07-02 22:48:56 PDT
Created attachment 150538 [details]
Patch
Comment 2 Kenneth Rohde Christiansen 2012-07-02 22:53:27 PDT
Comment on attachment 150538 [details]
Patch

Nice
Comment 3 WebKit Review Bot 2012-07-02 23:24:35 PDT
Comment on attachment 150538 [details]
Patch

Clearing flags on attachment: 150538

Committed r121731: <http://trac.webkit.org/changeset/121731>
Comment 4 WebKit Review Bot 2012-07-02 23:24:40 PDT
All reviewed patches have been landed.  Closing bug.