[WK2][EFL] Free Ewk_Intent calloc'd memory with free() instead of delete https://bugs.webkit.org/show_bug.cgi?id=90433

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-02
Reviewed by Kenneth Rohde Christiansen.

Free calloc'd memory with free() instead of delete in Ewk_Intent.
Add blank lines before return statements for consistency.

* UIProcess/API/efl/ewk_intent.cpp:
(ewk_intent_unref):
(ewk_intent_action_get):
(ewk_intent_type_get):
(ewk_intent_service_get):
(ewk_intent_suggestions_get):
(ewk_intent_extra_get):
(ewk_intent_extra_names_get):
(ewk_intent_new):

Canonical link: https://commits.webkit.org/108291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121731 268f45cc-cd09-0410-ab3c-d52691b4dbfc